<resources>
    <string name="app_name">eMenu</string>
    <string name="reset">Reset</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back">Back</string>
    <string name="administrative_page">Administrative Page</string>
    <string name="menu_page">Menu Page</string>
    <string name="account_settings">Account Settings</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="account_type">Account Type</string>
    <string name="phone_no">Phone No</string>
    <string name="item_no">Item No</string>
    <string name="doc_no">Doc No</string>
    <string name="Update">Update</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="sr_no">Sr. No.</string>
    <string name="logo">logo</string>
    <string name="e_menu">E-Menu</string>
    <string name="total">Total :</string>
</resources>
