<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="inherit"
    tools:context=".AddMenuActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="145dp"
        android:fontFamily="serif"
        android:text="@string/e_menu"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="128dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/tv_Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="229dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="30dp"
        android:text="@string/total"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total_price"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="30dp"
        android:text="@string/price"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_Total" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBillgenerate"
        android:layout_width="475dp"
        android:layout_height="583dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="145dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>